fix(sidebar): rework overflow / styles

--- a/packages/manager/apps/public-cloud/src/assets/theme/_sidebar.less
+++ b/packages/manager/apps/public-cloud/src/assets/theme/_sidebar.less
@@ -99,6 +99,10 @@ cloud-sidebar { /* stylelint-disable-line */
     width: 100%;
     box-sizing: inherit;
 
+    .oui-sidebar-list {
+      overflow: initial;
+    }
+
     .oui-sidebar-link_active,
     .oui-sidebar-link[aria-expanded="true"] {
       background-color: #fff;
